--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -51,8 +51,9 @@
 }
 
 /* 2. Dark Mode Overrides */
-@media (prefers-color-scheme: dark) {
-    :root {
+html.nightingale-dark-mode {
+/* @media (prefers-color-scheme: dark) { 
+    :root { */
         /* Base Colors */
         --background-color-warning: #2a2a2a;
         --background-color-base: #101010;
@@ -99,7 +100,7 @@
         --color-footer-text: #eaecf0;
         --border-color-footer: #4a4a4a;
         --border-color-footer-divider: rgba(255,255,255,0.1);
-    }
+    /*} */
 }
 
 /* 3. Map LESS variables to the CSS variables */
