--- a/resources/Icons.less
+++ b/resources/Icons.less
@@ -86,6 +86,7 @@
 #ca-nstab-template a,
 #ca-nstab-mediawiki a,
 #ca-nstab-project a,
+#ca-nstab-author a,
 #ca-nstab-category a,
 #ca-nstab-special a,
 #ca-nstab-main a {
