--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -37,6 +37,11 @@
     --color-input-text: #000000;
     --border-color-input: #ced4da;
 
+    /* UI Widgets (Buttons, Tags, Filters) */
+    --background-color-ui-widget: #ffffff;
+    --background-color-ui-subtle: #f8f9fa;
+    --border-color-ui-widget: #a2a9b1;
+
     /* Dropdowns */
     --background-color-dropdown: #ffffff;
     --border-color-dropdown: #a2a9b1;
@@ -89,6 +94,11 @@ html.nightingale-dark-mode {
         --color-input-text: #eaecf0;
         --border-color-input: #555555;
 
+        /* UI Widgets Dark Mode */
+        --background-color-ui-widget: #2a2a2a; 
+        --background-color-ui-subtle: #222222; 
+        --border-color-ui-widget: #555555;
+
         /* Dropdowns */
         --background-color-dropdown: #252525;
         --border-color-dropdown: #4a4a4a;
@@ -137,6 +147,11 @@ html.nightingale-dark-mode {
 @background-color-input: var(--background-color-input);
 @color-input-text: var(--color-input-text);
 @border-color-input: var(--border-color-input);
+
+/* UI Widget Mappings */
+@background-color-ui-widget: var(--background-color-ui-widget);
+@background-color-ui-subtle: var(--background-color-ui-subtle);
+@border-color-ui-widget: var(--border-color-ui-widget);
 
 /* Dropdown Mappings */
 @background-color-dropdown: var(--background-color-dropdown);
