--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -39,7 +39,7 @@
 
     /* UI Widgets (Buttons, Tags, Filters) */
     --background-color-ui-widget: #ffffff;
-    --background-color-ui-subtle: #f8f9fa;
+    --background-color-ui-subtle: #f9f9f9;
     --border-color-ui-widget: #a2a9b1;
 
     /* Dropdowns */
