--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -69,7 +69,7 @@ html.nightingale-dark-mode {
 
         /* Text Colors */
         --color-thumb: #dcdcdc;
-        --color-base: #eaecf0;
+        --color-base: #d1d5db;
         --color-gray: #b08fc2;
         --color-gray-2: #555555;
 
@@ -91,7 +91,7 @@ html.nightingale-dark-mode {
 
         /* Inputs */
         --background-color-input: #252525;
-        --color-input-text: #eaecf0;
+        --color-input-text: #d1d5db;
         --border-color-input: #555555;
 
         /* UI Widgets Dark Mode */
@@ -102,12 +102,12 @@ html.nightingale-dark-mode {
         /* Dropdowns */
         --background-color-dropdown: #252525;
         --border-color-dropdown: #4a4a4a;
-        --color-dropdown-text: #eaecf0;
+        --color-dropdown-text: #d1d5db;
         --background-color-dropdown-hover: #363636;
 
         /* Footer */
         --background-color-footer: #2a2a2a;
-        --color-footer-text: #eaecf0;
+        --color-footer-text: #d1d5db;
         --border-color-footer: #4a4a4a;
         --border-color-footer-divider: rgba(255,255,255,0.1);
     /*} */
