--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -174,6 +174,18 @@ html.nightingale-dark-mode {
 @color-input-text: var(--color-input-text);
 @border-color-input: var(--border-color-input);
 
+/* Editor & Code Mappings */
+@background-color-code: var(--background-color-code);
+@border-color-code: var(--border-color-code);
+@color-code-text: var(--color-code-text);
+
+@background-color-editor: var(--background-color-editor);
+@background-color-editor-bar: var(--background-color-editor-bar);
+@color-editor-text: var(--color-editor-text);
+
+@background-color-btn-save: var(--background-color-btn-save);
+@color-btn-text: var(--color-btn-text);
+
 /* UI Widget Mappings */
 @background-color-ui-widget: var(--background-color-ui-widget);
 @background-color-ui-subtle: var(--background-color-ui-subtle);
