--- a/resources/search/search.less
+++ b/resources/search/search.less
@@ -1,4 +1,4 @@
-@import 'mediawiki.skin.variables.less';
+@import '../mediawiki.skin.variables.less';
 
 /* Default state: Hide the dropdown completely */
 .czsearch-typeahead {
