--- a/resources/search/search.less
+++ b/resources/search/search.less
@@ -15,7 +15,7 @@
     /* Map Colors to Global Theme with FALLBACKS for safety */
     
     --color-base: var(--color-base, #202122);
-    --color-emphasized: var(--color-base, #000000);
+    --color-emphasized: var(--color-dropdown-text, #000000);
     --color-subtle: var(--color-gray, #54595d);
     
     /* Backgrounds */
