--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -42,7 +42,7 @@
     --border-color-code: #eaecf0;
     --color-code-text: #000000;
     --background-color-editor: #ffffff;
-    --background-color-editor-bar: #fbfdfd;
+    --background-color-editor-bar: #eaecf0;
     --color-editor-text: #000000;
     --background-color-toolbar: #f8f9fa;
     --border-color-toolbar: #c8ccd1;
